# cuda2hipcpu

./: CMakelists.txt  Dockerfile  README.md
.ci/azure-pipelines/: cuda2hipcpu.yml
sample/: CMakeLists.txt
utils/: convertAllCuda.sh
